tests/rpm-pkgs/libffi-3.1-29.fc35/output-exp@divine/scan-results.err
Error: COMPILER_WARNING:
libffi-3.1/x86_64-redhat-linux-gnu/conftest.s:1:8: warning: type specifier missing, defaults to 'int'
#.text; foo: nop; .data; .long foo-.; .text
#       ^

Error: COMPILER_WARNING:
libffi-3.1/x86_64-redhat-linux-gnu/conftest.s:1:13: warning: type specifier missing, defaults to 'int'
#.text; foo: nop; .data; .long foo-.; .text
#            ^
